[package]
name = "k8s-certificate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
futures = "0.3.30"
http = "1.0.0"
k8s-openapi = { version = "0.21.1", features = ["latest"] }
kube = { version = "0.88.1", features = ["runtime", "derive", "admission"] }
kube-derive = "0.88.1"
rcgen = "0.12.1"
schemars = "0.8.16"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
warp = { version = "0.3.6", features = ["tls"] }
